<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="117dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/map2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/black"
        app:title="Smart Bus"
        app:titleTextColor="@color/black" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map2"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/searchText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar2"
        tools:layout="@layout/dummy_mapviewfragment" />

    <EditText
        android:id="@+id/searchText2"
        android:layout_width="188dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:hint="@string/confirm_final_destination"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map2"
        tools:ignore="LabelFor" />
    <!--    app:layout_constraintBottom_toBottomOf="parent"-->

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onMapSearch"
        android:text="@string/searchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirmAddButton2"
        app:layout_constraintStart_toEndOf="@id/searchText2"
        app:layout_constraintTop_toBottomOf="@id/map2"
        tools:ignore="MissingConstraints" />
    <!--    app:layout_constraintBottom_toBottomOf="parent"-->

    <Button
        android:id="@+id/confirmAddButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="setFinalDestination"
        android:text="@string/confirm"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button22"
        app:layout_constraintTop_toBottomOf="@id/map2" />


</androidx.constraintlayout.widget.ConstraintLayout>